--- a/index.html
+++ b/index.html
@@ -9,17 +9,18 @@
 <body>
   <h1>🐍 Snake Game</h1>
 
-  <label for="difficulty">Chọn độ khó:</label>
-  <select id="difficulty">
-    <option value="150">Dễ</option>
-    <option value="100" selected>Trung bình</option>
-    <option value="60">Khó</option>
-  </select>
+  <div id="menu">
+    <label for="difficulty">Select Difficulty:</label>
+    <select id="difficulty">
+      <option value="200">Easy 🐢</option>
+      <option value="150" selected>Medium 🐍</option>
+      <option value="80">Hard 🐲</option>
+    </select>
+    <button id="startBtn">Start Game</button>
+  </div>
 
-  <div id="score">Score: 0</div>
-  <canvas id="gameCanvas" width="400" height="400"></canvas>
-  <div id="game-over">Game Over</div>
-  <button onclick="startGame()">Restart</button>
+  <div id="score" style="display: none;">Score: 0</div>
+  <div class="game-container" id="gameBoard" style="display: none;"></div>
 
   <script src="script.js"></script>
 </body>
